<resources>
    <string name="app_name">MAX</string>
    <string name="menu_info">Info</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_session">Session</string>
    <string name="menu_log">Log</string>
    <string name="logo_sub_caption">MAXimizing Aerobic Exercise</string>
    <string name="login_lbl_email">Email</string>
    <string name="login_lbl_password">Password</string>
    <string name="login_lbl_log_in">Log In</string>
    <string name="login_lbl_sign_up">Sign Up</string>
    <string name="login_lbl_or">OR</string>
    <string name="login_app_logo_description">The app\'s logo</string>
    <string name="login_err_login_failed">Login failed</string>
    <string name="session_lbl_pause">Pause Session</string>
    <string name="session_lbl_end">End Session</string>
    <string name="session_lbl_motivation">Motivation</string>
    <string name="session_lbl_bpm">bpm</string>
    <string name="session_lbl_time">Total Exercise Time:</string>
    <string name="session_lbl_session">Exercise Session</string>
    <string name="session_str_seed_up">You\'re below your target heart rate. Try speeding up!</string>
    <string name="session_str_slow_down">You\'re above your target heart rate. Slow down!</string>
    <string name="session_str_keep_up">You\'re in your target heart rate zone. Keep  up  the good work!</string>
    <string name="session_str_waiting">Awaiting sensor</string>
    <string name="dashboard_lbl">Dashboard</string>
    <string name="dashboard_current">Current HR</string>
    <string name="dashboard_min">Min</string>
    <string name="dashboard_max">Max</string>
    <string name="dashboard_total">Total</string>
    <string name="dashboard_target">Target</string>
    <string name="dashboard_days">Days</string>
    <string name="dashboard_empty">--</string>
    <string name="info_lbl_text_1"> The MAX app helps you exercise effectively to improve your fitness after having a stroke.  </string>
    <string name="info_lbl_text_2"> Using your personalized heart rate range, you will receive guidance on how hard you need to work while you are exercising.  </string>
    <string name="info_lbl_text_3"> The MAX app also provides guidance on how to progress your exercise so you can maximize your fitness. It also allows you to track your progress over time and share your successes!  </string>
    <string name="info_lbl_text_4"> To start your journey, head to the settings page.  </string>
    <string name="signup_inp_email_hint">Email</string>
    <string name="signup_inp_password_hint">Password</string>
    <string name="signup_inp_password_conf_hint">Confirm Password</string>
    <string name="signup_inp_username">Name</string>
    <string name="signup_btn_signup_lbl">Sign Up</string>
    <string name="signup_input_reg_password_hint_pattern">Min 8: mixed case, 1 num and 1 sym</string>
    <string name="signup_input_reg_conf_password_hint_pattern">Must match password above</string>
    <string name="signup_input_user_name_hint_pattern">At least 3 alphanumeric</string>
    <string name="signup_err_input_email">Please enter a valid email address</string>
    <string name="signup_err_input_pwd">Password too weak</string>
    <string name="signup_err_input_pwd_mismatch">Password mismatch</string>
    <string name="signup_err_input_username">Invalid username</string>
    <string name="signup_err_email_already_in_use">Email already in use.</string>
    <string name="signup_err_check_internet_conn">Please check your internet connection.</string>
    <string name="signup_err_try_again_later">Failure, please try again later.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_lbl_settings">Settings</string>
    <string name="setting1_lbl_set_hr">Setting Target Heart Rate (HR) Range</string>
    <string name="settings1_lbl_age">Age</string>
    <string name="settings1_lbl_max_hr">Maximum HR</string>
    <string name="settings1_lbl_min_hr">Minimum HR</string>
    <string name="settings1_lbl_set_exercise_goal">Setting Exercise Goal</string>
    <string name="settings1_lbl_time">Time in target\nHR range per\nweek (min)</string>
    <string name="settings1_btn_save">Save User Settings</string>
    <string name="settings2_lbl_reminder">Set weekly reminder\nfor exercise</string>
    <string name="settings2_btn_save">Save Features Settings</string>
    <string name="dashboard_empty_value">-- bpm</string>
    <string name="dashboard_lbl_this_week">This Week</string>
    <string name="dashboard_lbl_total_exercise">Total Exercise</string>
    <string name="dashboard_lbl_target_exercise">Target Exercise</string>
    <string name="dashboard_lbl_hr_range">HR Range</string>
    <string name="dashboard_lbl_minimum_hr">Minimum HR</string>
    <string name="dashboard_lbl_max_hr">Maximum HR</string>
    <string name="dashboard_lbl_min_hr">Minimum HR</string>
    <string name="session_lbl_start">START SESSION</string>
    <string name="session_lbl_resume">Resume Session</string>
    <string name="session_lbl_still_awaiting">Still awaiting sensor. Try again later.</string>
    <string name="settings2_lbl_sound_alert">Sound alert</string>
    <string name="settings1_toast_saved">User settings saved.</string>
    <string name="settings1_toast_failedToSave">Failed to save the data. Check you internet connection.</string>
    <string name="settings1_toast_invalidInput">Invalid Input</string>
    <string name="settings2_toast_saved">Features settings saved.</string>
    <string name="session_lbl_fetchingData">Fetching user settings.</string>
    <string name="log_lbl">Log</string>
    <string name="end_session_lbl">End Session</string>
    <string name="end_session_lbl_session_summary">Session Summary</string>
    <string name="end_session_date_lbl">Date</string>
    <string name="end_session_dash">--</string>
    <string name="end_session_total_exercise_lbl">Total Exercise Time</string>
    <string name="end_session_time_in_hr_lbl">Total Time Spent in\nTarget Heart Range</string>
    <string name="end_session_max_hr_lbl">Maximum Heart Rate</string>
    <string name="end_session_min_hr_lbl">Minimum Heart Rate</string>
    <string name="end_session_btn">Save Session</string>
    <string name="end_session_back_btm">Back</string>
    <string name="exercise_summary_lbl">Exercise Summary</string>
    <string name="menu_summary">Summary</string>
    <string name="log_lbl_share">Share</string>
    <string name="settings_lbl_log_out"><![CDATA[< Log Out]]></string>
    <string name="signup_lbl_age">Age</string>
    <string name="signup_age_hint">Numeric</string>
    <string name="signup_error">Please enter valid age.</string>

    <string-array name="settings2_time_array">
        <item>12:00 am</item>
        <item>12:30 am</item>
        <item>01:00 am</item>
        <item>01:30 am</item>
        <item>02:00 am</item>
        <item>02:30 am</item>
        <item>03:00 am</item>
        <item>03:30 am</item>
        <item>04:00 am</item>
        <item>04:30 am</item>
        <item>05:00 am</item>
        <item>05:30 am</item>
        <item>06:00 am</item>
        <item>06:30 am</item>
        <item>07:00 am</item>
        <item>07:30 am</item>
        <item>08:00 am</item>
        <item>08:30 am</item>
        <item>09:00 am</item>
        <item>09:30 am</item>
        <item>10:00 am</item>
        <item>10:30 am</item>
        <item>11:00 am</item>
        <item>11:30 am</item>
        <item>12:00 pm</item>
        <item>12:30 pm</item>
        <item>01:00 pm</item>
        <item>01:30 pm</item>
        <item>02:00 pm</item>
        <item>02:30 pm</item>
        <item>03:00 pm</item>
        <item>03:30 pm</item>
        <item>04:00 pm</item>
        <item>04:30 pm</item>
        <item>05:00 pm</item>
        <item>05:30 pm</item>
        <item>06:00 pm</item>
        <item>06:30 pm</item>
        <item>07:00 pm</item>
        <item>07:30 pm</item>
        <item>08:00 pm</item>
        <item>08:30 pm</item>
        <item>09:00 pm</item>
        <item>09:30 pm</item>
        <item>10:00 pm</item>
        <item>10:30 pm</item>
        <item>11:00 pm</item>
        <item>11:30 pm</item>
    </string-array>
</resources>
