<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_info" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/menu_dashboard" />
    <item
        android:id="@+id/navigation_session"
        android:icon="@drawable/ic_session"
        android:title="@string/menu_session" />
    <item
        android:id="@+id/navigation_log"
        android:icon="@drawable/ic_log"
        android:title="@string/menu_log" />
</menu>