<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EndSessionFragment">

    <View
        android:id="@+id/end_session_solid_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/end_session_max_heart"
        android:layout_width="277dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/login_app_logo_description"
        android:src="@drawable/max_heart_beat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/end_session_lbl_end_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_session_lbl_session_summary"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_session_solid_bar" />

    <View
        android:id="@+id/menu_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_session_lbl_end_session" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_divider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/date_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:text="@string/end_session_date_lbl"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_session_dash"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/date_lbl"
                app:layout_constraintEnd_toEndOf="@+id/total_exercise" />

            <TextView
                android:id="@+id/total_exercise_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:text="@string/end_session_total_exercise_lbl"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_lbl" />

            <TextView
                android:id="@+id/total_exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_session_dash"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/total_exercise_lbl"
                app:layout_constraintEnd_toEndOf="@+id/time_in_hr" />

            <TextView
                android:id="@+id/time_in_hr_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:text="@string/end_session_time_in_hr_lbl"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total_exercise_lbl" />

            <TextView
                android:id="@+id/time_in_hr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_session_dash"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/time_in_hr_lbl"
                app:layout_constraintEnd_toEndOf="@+id/max_hr" />

            <TextView
                android:id="@+id/max_hr_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:text="@string/end_session_max_hr_lbl"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_in_hr_lbl" />

            <TextView
                android:id="@+id/max_hr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_session_dash"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/max_hr_lbl"
                app:layout_constraintEnd_toEndOf="@+id/min_hr" />

            <TextView
                android:id="@+id/min_hr_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:text="@string/end_session_min_hr_lbl"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/max_hr_lbl" />

            <TextView
                android:id="@+id/min_hr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_session_dash"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/min_hr_lbl"
                app:layout_constraintEnd_toEndOf="@+id/end_session_back_btn" />

            <Button
                android:id="@+id/end_session_back_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:background="@color/colorPrimary"
                android:elevation="10sp"
                android:text="@string/end_session_back_btm"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/min_hr_lbl" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>